--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Web Page</title>
+    <title>Web Marco</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
