Barra de navegación y colores

--- a/index.html
+++ b/index.html
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Web Bruno</title>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="css/styles.css" />
-  </head>
 
-  <body></body>
+<head>
+  <title>Web Bruno</title>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+  
+  <link rel="stylesheet" href="css/styles.css" />
+
+  <style>
+    form{
+      width: 50%;
+      margin: 0 auto;
+      background: #eaeaea;
+      border-radius: 30px;
+      padding: 20px;
+      margin: 0 auto;
+      display: block;
+    }
+
+    form label{
+      display: block;
+      font-size: 18px;
+      color: #666;
+      line-height: 1.5em;;
+    }
+
+    form input, 
+    form textarea, 
+    form select{
+      color: #777;
+      padding: 5px;
+      font-size: 17px;
+      border-radius: 8px;
+      display: block;
+      width: 100%  ;
+      border: 1px solid #ccc;
+      margin-bottom: 30px;
+    }
+  </style>
+</head>
+
+<body class="bg-theme">
+  <!-- Navbar-->
+  <nav>
+    <div class="container">
+      <div>
+        <a href="#" class="logo">
+          <img src="https://themebing.com/html/amike/assets/images/logo.png" alt="Logo">
+        </a>
+      </div>
+      <div>
+        <ul class="nav-menu">
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Servicios</a></li>
+          <li><a href="#">Sobre mí</a></li>
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Contacto</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- End Navbar -->
+
+  <!-- Hero -->
+  <header id="site-header">
+    
+  </header>
+</body>
+
 </html>
