--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
       <div>
         <ul class="nav-menu">
           <li><a href="#">Inicio</a></li>
-          <li><a href="#">Servicios</a></li>
-          <li><a href="#">Sobre mí</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="#services">Servicios</a></li>
+          <li><a href="#about">Sobre mí</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact">Contacto</a></li>
         </ul>
       </div>
     </div>
